# VoiceType-AI

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: data-handling.md
src/: App.tsx  Hud.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  error.rs  hotkey.rs  http.rs  inject.rs  lib.rs  macperm.rs  main.rs  persist.rs  pipeline.rs  refine.rs  secrets.rs  state.rs  stt.rs  tray.rs  winfocus.rs
